2012-06-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Use \u8203\'3f as word break for TIS-620 RTF

	* src/filterrtf.cpp (FilterRTF::FilterRTF):
	  - Pass "\u8203\'3f" as word break for TIS-620 output.

2012-06-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Escape Unicode characters in UTF text.

	* conv/convkit.h (TextReader):
	  - Add curPos() public metod for accessing current reading pos.
	* src/filterrtf.cpp (FilterRTF::Print):
	  - If output is Unicode, escape each output character in the form
	    "\uDDDD\'XX\'YY\'ZZ" (DDDD = decimal Unicode code point;
	    \xXX\xYY\xZZ = UTF-8 bytes), according to Widhaya Trisarnwadhana.

2012-06-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Escape RTF word break.

	* src/filterrtf.cpp (FilterRTF::FilterRTF):
	  - Escape word break text, according to Widhaya Trisarnwadhana.

2012-06-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Revert input conversion on FilterRTF.

	* src/filterhtml.cpp (FilterRTF::GetNextToken):
	  - Revert ConvGetC() replacements to fgetc(). RTF stores characters
	    in escaped form, not directly UTF-8.

2012-06-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add input conversion for FilterRTF.

	* src/filterhtml.cpp (FilterRTF::GetNextToken):
	  - Replace fgetc() calls with ConvGetC().

2012-06-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add input conversion for FilterHtml.

	* src/convutil.h, src/convutil.cpp:
	  - Add ConvGetC() function resembling fgetc().
	* src/filterhtml.cpp (FilterHtml::GetNextToken):
	  - Replace fgetc() calls with ConvGetC().

2012-06-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Drop MAXCHAR macro and just use MAXLEN.

	* src/wordseg.cpp:
	  - Drop MAXCHAR macro def.
	  - s/MAXCHAR/MAXLEN/g.

2012-06-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add input conversion for FilterLatex.

	* src/Makefile.am, +src/convutil.h, +src/convutil.cpp:
	  - Add conversion utility functions resembling libc functions.